base/app/ingresses/ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.tool.teamleader.eu/oauth2/start?rd=https://$host$request_uri$is_args$args
    nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.tool.teamleader.eu/oauth2/auth
spec:
  ingressClassName: nginx
  tls:
    - secretName: app-placeholder-tls
      hosts:
        - app-placeholder
  rules:
    - host: app-placeholder
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
